--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,4 +1,4 @@
-<div th:replace="compartilhados/header">...</div>
+<div th:replace="~{compartilhados/header}"></div>
 <!-- Begin Page Content -->
             <div class="container-fluid">
 
@@ -9,4 +9,4 @@
 
             </div>
 <!-- /.container-fluid -->
-<div th:replace="compartilhados/footer">...</div>
+<div th:replace="~{compartilhados/footer}"></div>
