--- a/src/main/resources/templates/compartilhados/header.html
+++ b/src/main/resources/templates/compartilhados/header.html
@@ -43,7 +43,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
-            <a class="nav-link" href="/"><i class="fas fa-fw fa-tachometer-alt"></i>Dashboard</a>
+            <a class="nav-link" href="/"><i class="fas fa-fw fa-tachometer-alt"></i>Dashboard Financeiro</a>
         </li>
 
         <!-- Divider -->
@@ -59,6 +59,30 @@
             <a class="nav-link" href="/alunos">
                 <i class="fas fa-fw fa-table"></i>
                 <span>Alunos</span></a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/alunos">
+                <i class="fas fa-fw fa-table"></i>
+                <span>Turmas</span></a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/alunos">
+                <i class="fas fa-fw fa-table"></i>
+                <span>Graduação</span></a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/alunos">
+                <i class="fas fa-fw fa-table"></i>
+                <span>Informações</span></a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/alunos">
+                <i class="fas fa-fw fa-table"></i>
+                <span>Perfil</span></a>
         </li>
 
         <!-- Divider -->
@@ -124,10 +148,7 @@
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                              aria-labelledby="userDropdown">
-                            <a class="dropdown-item" href="/alunos">
-                                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                Alunos
-                            </a>
+
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/sair" data-toggle="modal" data-target="#logoutModal">
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
