--- a/src/main/resources/templates/compartilhados/header.html
+++ b/src/main/resources/templates/compartilhados/header.html
@@ -62,7 +62,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="/alunos">
+            <a class="nav-link" href="/turmas">
                 <i class="fas fa-fw fa-table"></i>
                 <span>Turmas</span></a>
         </li>
