--- a/src/main/resources/templates/compartilhados/header.html
+++ b/src/main/resources/templates/compartilhados/header.html
@@ -68,7 +68,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="/alunos">
+            <a class="nav-link" href="/graduacao">
                 <i class="fas fa-fw fa-table"></i>
                 <span>Graduação</span></a>
         </li>
