feat: creating funcionality of present list in endpoint chamadas

--- a/src/main/resources/templates/compartilhados/header.html
+++ b/src/main/resources/templates/compartilhados/header.html
@@ -80,9 +80,9 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="/alunos">
+            <a class="nav-link" href="/chamadas">
                 <i class="fas fa-fw fa-table"></i>
-                <span>Perfil</span></a>
+                <span>Chamadas</span></a>
         </li>
 
         <!-- Divider -->
