--- a/src/main/resources/templates/compartilhados/header.html
+++ b/src/main/resources/templates/compartilhados/header.html
@@ -43,7 +43,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
-            <a class="nav-link" href="/"><i class="fas fa-fw fa-tachometer-alt"></i>Dashboard Financeiro</a>
+            <a class="nav-link" href="/"><i class="fas fa-fw fa-tachometer-alt"></i>Home</a>
         </li>
 
         <!-- Divider -->
