--- a/src/main/resources/templates/alunos/index.html
+++ b/src/main/resources/templates/alunos/index.html
@@ -27,30 +27,66 @@
                     <thead>
                     <tr>
                         <th>Nome</th>
+                        <th>Categoria</th>
                         <th>Graduação</th>
+                        <th>Data Graduação</th>
+                        <th>Data Nascimento</th>
                         <th>Idade</th>
                         <th>Peso</th>
                         <th>Telefone</th>
+                        <th>Email</th>
+                        <th>Endereço</th>
+                        <th>Turma</th>
+                        <th>Observações</th>
+                        <th>Ações</th>
                     </tr>
                     </thead>
                     <tfoot>
                     <tr>
                         <th>Nome</th>
+                        <th>Categoria</th>
                         <th>Graduação</th>
+                        <th>Data Graduação</th>
+                        <th>Data Nascimento</th>
                         <th>Idade</th>
                         <th>Peso</th>
                         <th>Telefone</th>
+                        <th>Email</th>
+                        <th>Endereço</th>
+                        <th>Turma</th>
+                        <th>Observações</th>
+                        <th>Ações</th>
                     </tr>
                     </tfoot>
                     <tbody>
                     <tr th:each="aluno : ${alunos}">
                         <td th:text="${aluno.nome}"></td>
+                        <td th:text="${aluno.categoria}"></td>
                         <td th:text="${aluno.graduacao}"></td>
+                        <td>
+                            <span th:if="${aluno.dataGraduacao != null}" th:text="${#temporals.format(aluno.dataGraduacao, 'dd/MM/yyyy')}"></span>
+                        </td>
+                        <td>
+                            <span th:if="${aluno.dataNascimento != null}" th:text="${#temporals.format(aluno.dataNascimento, 'dd/MM/yyyy')}"></span>
+                        </td>
                         <td th:text="${aluno.idade}"></td>
                         <td th:text="${aluno.peso}"></td>
                         <td th:text="${aluno.telefone}"></td>
-                        <td><a th:href="@{'/alunos/' + ${aluno.id}}" class="btn btn-warning">Alterar</a></td>
-                        <td><a href="#" th:onclick="'if(confirm(\'Confirma ?\')) { window.location.href = \'' + @{/alunos/{id}(id=${aluno.id})} + '/excluir\' } '" class="btn btn-danger">Excluir</a></td>
+                        <td th:text="${aluno.email}"></td>
+                        <td>
+                            <span th:text="${aluno.enderecoRua}"></span>,
+                            <span th:text="${aluno.enderecoNumero}"></span> -
+                            <span th:text="${aluno.enderecoBairro}"></span>,
+                            <span th:text="${aluno.enderecoCidade}"></span>
+                        </td>
+                        <td th:text="${aluno.turma}"></td>
+                        <td th:text="${aluno.observacoes}"></td>
+                        <td>
+                            <a th:href="@{'/alunos/' + ${aluno.id}}" class="btn btn-warning">Alterar</a>
+                            <a th:href="@{'/alunos/' + ${aluno.id} + '/excluir'}"
+                               th:onclick="|return confirm('Confirma?');|"
+                               class="btn btn-danger">Excluir</a>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
@@ -59,6 +95,7 @@
     </div>
 </div>
 <!-- /.container-fluid -->
+
 <div th:replace="~{compartilhados/footer}"></div>
 
 </body>
